# CodeSnippets

biopython/: annotate_hydrophobi.py  biopython_parse_pdb.py  read_fasta.py
biopython从PDB获取序列/: biopython_get_seq_from_pdb.py
pyproject写法/: pyproject.toml
